simulatron-silk/src/snapshots/simulatron_silk__tests__combine_external.snap
---
source: src/tests.rs
expression: parsed

---
---Symbols---
bar I 0x0000000E 
  0x00000001
  0x00000005
foobaz P 0x00000012 
  0x00000009
  0x00000016
---Sections---
Section 0 flags: 00010001 start: 0x00000000 length: 0x00000016
0x00000000    FF 00 00 00  00 00 00 00  00 00 00 00  00 FF AA AA
0x00000010    AA AA BB BB  BB BB
Section 1 flags: 00010001 start: 0x00000016 length: 0x00000004
0x00000000    00 00 00 00

