simulatron-silk/src/snapshots/simulatron_silk__tests__combine_external_reversed.snap
---
source: src/lib.rs
expression: parsed

---
---Symbols---
bar I 0x12345678 
  0x0000008A
  0x0000008E
foobaz P 0x9ABCDEF0 
  0x00000038
  0x00000092
---Sections---
Section 0 flags: 00010001 start: 0x00000038 length: 0x00000004
0x00000000    00 00 00 00
Section 1 flags: 00010001 start: 0x00000089 length: 0x0000000E
0x00000000    FF 00 00 00  00 00 00 00  00 00 00 00  00 FF

