simulatron-silk/src/snapshots/simulatron_silk__tests__combine_internal.snap
---
source: src/lib.rs
expression: parsed

---
---Symbols---
foo I 0x12345678 
  0x0000003B
  0x00000045
foo0 I 0x12345678 
  0x00000092
  0x0000009B
---Sections---
Section 0 flags: 00010001 start: 0x00000039 length: 0x00000010
0x00000000    FF FF 00 00  00 00 FF FF  FF FF FF FF  00 00 00 00
Section 1 flags: 00001100 start: 0x0000008E length: 0x0000000C
0x00000000    FF FF FF FF  00 00 00 00  FF FF FF FF
Section 2 flags: 00010001 start: 0x0000009A length: 0x00000008
0x00000000    11 00 00 00  00 11 11 11

