simulatron-silk/src/snapshots/simulatron_silk__tests__combine_public_internal.snap
---
source: src/lib.rs
expression: parsed

---
---Symbols---
bar I 0x12345678 
  Section 0 0x00000001
  Section 0 0x00000005
foobaz P 0x9ABCDEF0 
  Section 0 0x00000009
foobaz0 I 0x00000000 
  Section 1 0x00000000
---Sections---
Section 0 flags: 0000010001
FF 00 00 00  00 00 00 00  00 00 00 00  00 FF
Section 1 flags: 0000010001
00 00 00 00  42 42

