simulatron-silk/src/snapshots/simulatron_silk__tests__multi_symbol.snap
---
source: src/lib.rs
expression: parsed

---
---Symbols---
bar I 0x12345678 
  Section 0 0x00000001
  Section 0 0x00000005
foobaz P 0x9ABCDEF0 
  Section 0 0x00000009
---Sections---
Section 0 flags: 0000010001
FF 00 00 00  00 00 00 00  00 00 00 00  00 FF

