simulatron-silk/src/snapshots/simulatron_silk__tests__single_symbol.snap
---
source: src/lib.rs
expression: parsed

---
---Symbols---
foo I 0x12345678 
  0x0000003B
  0x00000045
---Sections---
Section 0 flags: 00010001 start: 0x00000039 length: 0x00000010
0x00000000    FF FF 00 00  00 00 FF FF  FF FF FF FF  00 00 00 00

